# Universal-C-Data-management

./: README.md
uvcd/: CMakeLists.txt  uvcd.c  uvcd.h
